syntax = "proto3";
package Models;

message ProdModel{
  // @inject_tag: json:"pid"
  int64 ProdId = 1;
  // @inject_tag: json:"pname"
  string ProdName = 2;
}

message ProdsRequest{
  int64 size=1;
}

message ProdListResponse{
  repeated ProdModel data=1;
}